# AI-Speed-Limit-Detection-with-Python-Qt-Dashboard

./: CMakeLists.txt  Main.cpp  Main.py  README.md  SpeedClass.txt  data.yaml  rapport README.docx  resources.qrc  simulate_speed_detection.py  speed_limit_data.txt  speedlimitreader.cpp  speedlimitreader.h  test.py  vitesse_limite.json
qml/: Gauge.qml
